--- a/ProductPlatformAnalyzer/css/style.css
+++ b/ProductPlatformAnalyzer/css/style.css
@@ -13,6 +13,11 @@ em {
 	font-style: italic; 
 }
 
+ul {
+    list-style:none;
+    padding-left:0;
+}​
+
 table {
 	background: #f5f5f5;
 	border-collapse: separate;
@@ -20,8 +25,9 @@ table {
 	font-size: 12px;
 	line-height: 24px;
 	margin: 40px;
+	margin-left: 40px;
 	text-align: left;
-	width: 800px;
+	width: auto;
 }	
 
 th {
@@ -32,11 +38,26 @@ th {
 	border-bottom: 1px solid #333;
 	box-shadow: inset 0 1px 0 #999;
 	color: #fff;
-  font-weight: bold;
+    font-weight: bold;
 	padding: 10px 15px;
 	position: relative;
 	text-shadow: 0 1px 0 #000;	
 }
+
+th.vg {
+	background: #707070;	
+	border-left: 1px solid #555;
+	border-right: 1px solid #777;
+	border-top: 1px solid #555;
+	border-bottom: 1px solid #555;
+	box-shadow: inset 0 1px 0 #999;
+	color: #fff;
+    font-weight: bold;
+	padding: 10px 15px;
+	position: relative;
+	text-shadow: 0 1px 0 #000;	
+}
+
 
 th:after {
 	background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,.08));
@@ -97,13 +118,3 @@ tr:last-of-type td:first-child {
 tr:last-of-type td:last-child {
 	box-shadow: inset -1px -1px 0 #fff;
 }	
-
-tbody:hover td {
-	color: transparent;
-	text-shadow: 0 0 1px #aaa;
-}
-
-tbody:hover tr:hover td {
-	color: #444;
-	text-shadow: 0 1px 0 #fff;
-}
