--- a/ProductPlatformAnalyzer/css/style.css
+++ b/ProductPlatformAnalyzer/css/style.css
@@ -118,3 +118,13 @@ tr:last-of-type td:first-child {
 tr:last-of-type td:last-child {
 	box-shadow: inset -1px -1px 0 #fff;
 }	
+
+.title {
+	font-size:18px;
+	background-color:lightsteelblue;
+	width:350px;
+}
+
+.title span {
+	float: 	right;	
+}
