--- a/ProductPlatformAnalyzer/css/style.css
+++ b/ProductPlatformAnalyzer/css/style.css
@@ -2,7 +2,7 @@ body {
 	background: #fafafa url(http://jackrugile.com/images/misc/noise-diagonal.png);
 	color: #444;
 	font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
-	text-shadow: 0 1px 0 #fff;
+	text-shadow: 0 1px 0 #C8C8C8 ;
 }
 
 strong {
@@ -45,7 +45,7 @@ th {
 }
 
 th.vg {
-	background: #707070;	
+	background: #787878;	
 	border-left: 1px solid #555;
 	border-right: 1px solid #777;
 	border-top: 1px solid #555;
@@ -53,7 +53,7 @@ th.vg {
 	box-shadow: inset 0 1px 0 #999;
 	color: #fff;
     font-weight: bold;
-	padding: 10px 15px;
+	padding: 6px 11px;
 	position: relative;
 	text-shadow: 0 1px 0 #000;	
 }
@@ -85,7 +85,7 @@ td {
 	border-left: 1px solid #e8e8e8;
 	border-top: 1px solid #fff;
 	border-bottom: 1px solid #e8e8e8;
-	padding: 10px 15px;
+	padding: 6px 11px;
 	position: relative;
 	transition: all 300ms;
 }
@@ -121,10 +121,16 @@ tr:last-of-type td:last-child {
 
 .title {
 	font-size:18px;
-	background-color:lightsteelblue;
+	background-color: #A9ACB6;
 	width:350px;
+	padding: 5px 7px;
 }
 
 .title span {
 	float: 	right;	
+}
+
+.false {
+	
+	color: #B00000;	
 }
